# rate-my-resume

./: .env.sample  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/config/: config.py  logging_config.py
app/enums/: file_extension.py
app/models/: resume.py
app/routers/: health_checker.py  resume.py  resume_router.py
app/services/: file_parser.py  resume_scoring.py
app/utils/: file_utils.py  hashing_utils.py  logger.py  scoring_utils.py
